feat: add obligations payment fifo engine
